apps/arcs/sigma/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arc-sigma
  labels:
    sage.arc: "true"
    arc.name: "sigma"
